...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/mandatory_indicator"
        android:textColor="@color/mandatory_and_error_indicator"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextUserName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textUserLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/mandatory_indicator"
        android:textColor="@color/mandatory_and_error_indicator"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textColor="@color/mandatory_and_error_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrierLabels"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_button_label"
...
